Update README.md
格式化readme

Co-Authored-By: peiht <1071532941@qq.com>